--- a/src/javascript/12-advanced-flow-control/66-the-event-loop-and-callback-hell/66-the-event-loop-and-callback-hell.mdx
+++ b/src/javascript/12-advanced-flow-control/66-the-event-loop-and-callback-hell/66-the-event-loop-and-callback-hell.mdx
@@ -21,7 +21,7 @@ Because JavaScript is single threaded, which means we can only run one thing at 
 
 Let's visualize that with some examples.
 
-Open up the `event-loop.html` file within the `exercises/` directory. Add two logs within the script tag and then refresh the page to check them.
+Open up the `event-loop.html` file within the `playground/` directory. Add two logs within the script tag and then refresh the page to check them.
 
 ```js
 console.log('Starting');
